@@ -11,8 +11,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - Perl{Set,Pass}Env tainted, should they not be? (Vivek)
 
-- Perl{Set,Pass}Env needs to happen asap for "top-level" config (Todd E.)
-
 - dso + register_cleanup via startup pool
 
 - $r->finfo flaky? (Ken)
